完成异议处理、澄清/修改增加附件功能

--- a/TenderInfo/Views/Account/EditAccountFrame.cshtml
+++ b/TenderInfo/Views/Account/EditAccountFrame.cshtml
@@ -880,12 +880,12 @@
                         <button type="button" id="btnReturn" class="btn bg-black">
                             <i class="glyphicon glyphicon-share-alt"></i> 返回
                         </button>
-                        @*@if (User.IsInRole("新建招标台账"))
+                        @if (User.IsInRole("新建招标台账"))
                         {
                             <button type="button" id="btnDel" class="btn btn-danger">
                                 <i class="glyphicon glyphicon-remove"></i> 删除
                             </button>
-                        }*@
+                        }
                     </div>
                 </form>
             </div>
