--- a/TenderInfo/Views/Account/EditAccountMaterial.cshtml
+++ b/TenderInfo/Views/Account/EditAccountMaterial.cshtml
@@ -288,18 +288,34 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="tbxClarifyReasonEdit">
-                                            事由
-                                        </label>
-                                        <textarea id="tbxClarifyReasonEdit" name="tbxClarifyReasonEdit" class="form-control input-sm" rows="3" cols="60"></textarea>
+                                        <label for="lblClarifyFile">附件</label><br />
+                                        <a id="lblClarifyFile"></a>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        <label for="clarifyFile">【澄清/修改】附件上传</label>
+                                        <input id="clarifyFile" name="clarifyFile" type="file" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="tbxClarifyReasonEdit">
+                                            事由
+                                        </label>
+                                        <textarea id="tbxClarifyReasonEdit" name="tbxClarifyReasonEdit" class="form-control input-sm" rows="5" cols="60"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
                                         <label for="tbxClarifyDisposeInfoEdit">
                                             处理情况
                                         </label>
-                                        <textarea id="tbxClarifyDisposeInfoEdit" name="tbxClarifyDisposeInfoEdit" class="form-control input-sm" rows="3" cols="60"></textarea>
+                                        <textarea id="tbxClarifyDisposeInfoEdit" name="tbxClarifyDisposeInfoEdit" class="form-control input-sm" rows="5" cols="60"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -393,18 +409,34 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="tbxDissentReasonEdit">
-                                            事由
-                                        </label>
-                                        <textarea id="tbxDissentReasonEdit" name="tbxDissentReasonEdit" class="form-control" rows="3" cols="60"></textarea>
+                                        <label for="lblDissentFile">附件</label><br />
+                                        <a id="lblDissentFile"></a>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        <label for="dissentFile">异议处理文件</label>
+                                        <input id="dissentFile" name="dissentFile" type="file" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="tbxDissentReasonEdit">
+                                            事由
+                                        </label>
+                                        <textarea id="tbxDissentReasonEdit" name="tbxDissentReasonEdit" class="form-control" rows="6" cols="60"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
                                         <label for="tbxDissentDisposeInfoEdit">
                                             处理情况
                                         </label>
-                                        <textarea id="tbxDissentDisposeInfoEdit" name="tbxDissentDisposeInfoEdit" class="form-control" rows="3" cols="60"></textarea>
+                                        <textarea id="tbxDissentDisposeInfoEdit" name="tbxDissentDisposeInfoEdit" class="form-control" rows="6" cols="60"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -901,7 +933,7 @@
                                     <table class="table table-bordered table-condensed table-hover">
                                         <thead>
                                             <tr>
-                                                <th colspan="9" class="text-center">澄清（修改）</th>
+                                                <th colspan="10" class="text-center">澄清（修改）</th>
                                             </tr>
                                             <tr>
                                                 <th class="text-center">操作</th>
@@ -911,6 +943,7 @@
                                                 <th class="text-center">受理时间</th>
                                                 <th class="text-center">处理人</th>
                                                 <th class="text-center">澄清/修改</th>
+                                                <th class="text-center">附件</th>
                                                 <th class="text-center">处理情况</th>
                                                 <th class="text-center">答复时间</th>
                                             </tr>
@@ -932,7 +965,7 @@
                                     <table class="table table-bordered table-condensed table-hover">
                                         <thead>
                                             <tr>
-                                                <th colspan="9" class="text-center">异议处理</th>
+                                                <th colspan="11" class="text-center">异议处理</th>
                                             </tr>
                                             <tr>
                                                 <th class="text-center">操作</th>
@@ -945,6 +978,7 @@
                                                 <th class="text-center">处理人</th>
                                                 <th class="text-center">处理情况</th>
                                                 <th class="text-center">答复时间</th>
+                                                <th class="text-center">附件</th>
                                             </tr>
                                         </thead>
                                         <tbody id="tableFive"></tbody>
@@ -982,6 +1016,9 @@
                                 <textarea id="tbxTenderRemarkEdit" name="tbxTenderRemarkEdit" class="form-control" rows="3"></textarea>
                             </div>
                         </div>
+                        <button type="button" id="btnSave" class="btn btn-info">
+                            <i class="glyphicon glyphicon-floppy-saved"></i> 保存
+                        </button>
                         <button type="button" id="btnSubmit" class="btn btn-primary">
                             <i class="glyphicon glyphicon-ok"></i> 提交
                         </button>
@@ -1112,7 +1149,9 @@
         SetBtnState();
         function SetBtnState() {
             if ($("#userRoleEdit").text().trim() !== "yes") {
-                $("#btnSubmit,#btnFirstImport,#btnFirstRemove,#btnSecondImport,#btnSecondRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd").hide();
+                $("#btnFirstImport,#btnFirstRemove,#btnSecondImport,#btnSecondRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd").hide();
+                $("#btnDeptAdd,#btnConnectAdd").hide();
+                $("#btnSubmit,#btnSave").hide();
             }
         }
 
@@ -1135,11 +1174,13 @@
         $("#btnFourAdd").click(function () {
             ClearInfo();
             $("#tbxAccountFourID").val($("#tbxAccountIDEdit").val());
+            $("#lblClarifyFile").text("").attr("href","");
             $('#FourModal').modal('show');
         });
         $("#btnFiveAdd").click(function () {
             ClearInfo();
             $("#tbxAccountFiveID").val($("#tbxAccountIDEdit").val());
+            $("#lblDissentFile").text("").attr("href", "");
             $('#FiveModal').modal('show');
         });
         $("#btnConnectAdd").click(function () {
@@ -1537,6 +1578,7 @@
                     list += "<td>" + getJsonDateShort(valueOfElement["ClarifyAcceptDate"]) + "</td>";
                     list += "<td>" + valueOfElement["ClarifyDisposePerson"] + "</td>";
                     list += "<td>" + valueOfElement["IsClarify"] + "</td>";
+                    list += "<td><a href='../FileUpload/" + valueOfElement["ClarifyFile"]+"'>下载</a></td>";
                     list += "<td>" + valueOfElement["ClarifyDisposeInfo"] + "</td>";
                     list += "<td>" + getJsonDateShort(valueOfElement["ClarifyReplyDate"]) + "</td>";
                     list += "</tr>";
@@ -1567,6 +1609,7 @@
                     list += "<td>" + valueOfElement["DissentDisposePerson"] + "</td>";
                     list += "<td>" + valueOfElement["DissentDisposeInfo"] + "</td>";
                     list += "<td>" + getJsonDateShort(valueOfElement["DissentReplyDate"]) + "</td>";
+                    list += "<td><a href='../FileUpload/" + valueOfElement["DissentFile"] + "'>下载</a></td>";
                     list += "</tr>";
                 });
                 $("#tableFive").empty().append(list);
@@ -1740,6 +1783,7 @@
                 $("#tbxClarifyReplyDateEdit").val(getJsonDateShort(result.ClarifyReplyDate));
                 $("#tbxClarifyReasonEdit").val(result.ClarifyReason);
                 $("#tbxClarifyDisposeInfoEdit").val(result.ClarifyDisposeInfo);
+                $("#lblClarifyFile").attr("href", result.ClarifyFile).text(result.ClarifyFile);
             });
         });
         $(document).on("click", ".btnFourDel", function () {
@@ -1782,6 +1826,7 @@
 
                 $("#tbxDissentReasonEdit").val(result.DissentReason);
                 $("#tbxDissentDisposeInfoEdit").val(result.DissentDisposeInfo);
+                $("#lblDissentFile").attr("href", result.DissentFile).text(result.DissentFile);
             });
         });
         $(document).on("click", ".btnFiveDel", function () {
@@ -1873,6 +1918,38 @@
             });
         });
 
+        $("#btnSave").click(function () {
+            var usingDeptEditVal = $("#ddlUsingDeptEdit").val();
+            var projectResponsibleDeptEditVal = $("#ddlProjectResponsibleDeptEdit").val();
+
+            if (usingDeptEditVal === null || projectResponsibleDeptEditVal === null) {
+                toastr.error("使用单位、项目主责部门必须填写！", "提示");
+            }
+            else {
+                Ewin.confirm({ message: "确定要保存吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
+                    }
+                    else {
+                        $("#EditAccountForm").ajaxSubmit({
+                            url: "/Account/Update",
+                            type: "post",
+                            success: function (result) {
+                                if (result === "ok") {
+                                    toastr.success("操作成功！", "提示");
+                                    BackView();
+                                }
+                            },
+                            error: function (error) {
+                                toastr.error(error, "提示");
+                                return;
+                            }
+                        });
+                    }
+                });
+            }
+        });
+
         $("#btnSubmit").click(function () {
             var usingDeptEditVal = $("#ddlUsingDeptEdit").val();
             var projectResponsibleDeptEditVal = $("#ddlProjectResponsibleDeptEdit").val();
@@ -1887,7 +1964,7 @@
                     }
                     else {
                         $("#EditAccountForm").ajaxSubmit({
-                            url: "/Account/Update",
+                            url: "/Account/CompeletSubmit",
                             type: "post",
                             success: function (result) {
                                 if (result === "ok") {
