--- a/TenderInfo/Views/Shared/_Layout.cshtml
+++ b/TenderInfo/Views/Shared/_Layout.cshtml
@@ -319,7 +319,7 @@
                     //    }, 1500);
                     //}
                 }
-                setInterval(CheckCookie, 1000);
+                //setInterval(CheckCookie, 1000);
             });
         </script>
     </div>
