--- a/TenderInfo/Views/Account/Material.cshtml
+++ b/TenderInfo/Views/Account/Material.cshtml
@@ -12,6 +12,7 @@
 <span id="accountType" class="hidden">物资</span>
 
 @Html.Partial("NewAccountModal")
+@Html.Partial("_PartialApproveEdit")
 <div class="box box-danger">
     <div class="box-header">
         <h3 class="box-title">招标管理台账--物资</h3>
